syntax = "proto3";
import "google/protobuf/timestamp.proto";

package kitchen;

service KitchenService {
  rpc AcceptOrder (OrderToDishRequest) returns (OrderToDishResponse);
}

enum KitchenStatus {
  AWAITING = 0;
  AT_WORK = 1;
  READY = 2;
}

message DishResponse {
  int64 dish_id = 1;
  string short_name = 2;
}

message KitchenOrderResponse {
  int64 kitchen_order_id = 1;
  int64 waiter_order_no = 2;
  KitchenStatus status = 3;
  google.protobuf.Timestamp create_date = 4;
}

message OrderToDishResponse {
  KitchenOrderResponse kitchen_order_response = 1;
  repeated DishResponse dish_response = 2;
}

message DishRequest {
  int64 dish_id = 1;
  int64 dishes_number = 2;
}

message OrderToDishRequest {
  int64 kitchen_order_id = 1;
  int64 waiter_order_no = 2;
  repeated DishRequest dish_request = 3;
}